--- a/css/typography.css
+++ b/css/typography.css
@@ -3,23 +3,23 @@
     font-family: 'CamboRegular';
     src: url('../webfonts/Cambo-Regular-webfont.eot');
     src: url('../webfonts/Cambo-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../webfonts/Cambo-Regular-webfont.woff') format('woff'),
-         url('../webfonts/Cambo-Regular-webfont.ttf') format('truetype'),
-         url('../webfonts/Cambo-Regular-webfont.svg#CamboRegular') format('svg');
+        url('../webfonts/Cambo-Regular-webfont.woff') format('woff'),
+        url('../webfonts/Cambo-Regular-webfont.ttf') format('truetype'),
+        url('../webfonts/Cambo-Regular-webfont.svg#CamboRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face{ 
-  font-family: 'WebSymbolsRegular';
-  src: url('../webfonts/websymbols-regular-webfont.eot');
-  src: url('../webfonts/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../webfonts/websymbols-regular-webfont.woff') format('woff'),
-       url('../webfonts/websymbols-regular-webfont.ttf') format('truetype'),
-       url('../webfonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
-       font-weight: normal;
-       font-style: normal;
-  }
+    font-family: 'WebSymbolsRegular';
+    src: url('../webfonts/websymbols-regular-webfont.eot');
+    src: url('../webfonts/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../webfonts/websymbols-regular-webfont.woff') format('woff'),
+        url('../webfonts/websymbols-regular-webfont.ttf') format('truetype'),
+        url('../webfonts/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {font-size:13px; font-family:Arial, Helvetica, sans-serif;}
 h1, h2,h3,h4,h5,h6 {font-family:"CamboRegular", Georgia, "Times New Roman", Times, serif; font-weight:normal; color:#b80000;}
@@ -32,6 +32,6 @@ table {border-collapse:collapse; border:1px solid #d4d4d4; border-spacing:0; mar
 table tr:nth-child(even) {background-color:#ededed;}
 table tr.even, .content table th, .content thead td {background-color:#ededed;}
 table td, .content table th {padding:2px 5px;border:1px solid #d4d4d4; vertical-align:top;}
-table th {text-align:left; font-weight:bold;}
+table th {text-align:left; font-weight:bold; padding:2px 5px; border: 1px solid #d4d4d4;}
 
 p.intro{font-family:"CamboRegular", Georgia, "Times New Roman", Times, serif; font-size:22px; line-height:32px; margin-bottom:20px; color:#222;}
