--- a/css/typography.css
+++ b/css/typography.css
@@ -28,7 +28,14 @@ em {font-style:normal;}
 a {color:#b80000; text-decoration:none;}
 a:hover {color:#d80000;}
 
-table {border-collapse:collapse; border:1px solid #d4d4d4; border-spacing:0; margin:0 0 10px;}
+table {
+    border-collapse:collapse; 
+    border:1px solid #d4d4d4; 
+    border-spacing:0; 
+    margin:0 0 10px;
+    width: 100%;
+    box-shadow: 5px 5px 5px #888;
+}
 table tr:nth-child(even) {background-color:#ededed;}
 table tr.even, .content table th, .content thead td {background-color:#ededed;}
 table td, .content table th {padding:2px 5px;border:1px solid #d4d4d4; vertical-align:top;}
